--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="./styles.css" rel="stylesheet">
     <title>Voting App</title>
 </head>
 
@@ -40,25 +41,30 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <form>
+                    <form id="regForm" class="has-validation">
                         <div class="form-group">
-                            <label for="inputUsername">Username</label>
-                            <input type="text" class="form-control" id="regUsername" placeholder="Enter username"
+                            <label for="regName">Full name</label>
+                            <input type="text" class="form-control" id="regFullName" placeholder="Enter full name"
                                 required>
                         </div>
                         <div class="form-group">
-                            <label for="inputPassword1">Password</label>
-                            <input type="password" class="form-control" id="regPassword1" placeholder="Password"
+                            <label for="regUsername">Username</label>
+                            <input type="text" class="form-control is-invalid" id="regUsername" placeholder="Enter username"
                                 required>
                         </div>
-                        <div class="form-group invisible">
-                            <label for="inputPassword2">Re-enter password</label>
-                            <input type="password" class="form-control" id="regPassword2"
-                                placeholder="Password"><span></span>
+                        <div class="form-group">
+                            <label for="regPassword1">Password</label>
+                            <input type="password" class="form-control is-invalid" id="regPassword1" placeholder="Enter password"
+                                disabled required>
+                        </div>
+                        <div class="form-group">
+                            <label for="regPassword2">Re-enter password</label>
+                            <input type="password" class="form-control is-invalid" id="regPassword2"
+                                placeholder="Re-enter password" disabled>
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                            <button type="submit" class="btn btn-primary" id="registerSubmit" disabled>Register</button>
+                            <button type="submit" class="btn btn-primary" id="regSubmit" disabled>Register</button>
                         </div>
                     </form>
                 </div>
@@ -94,6 +100,7 @@
     </div>
 
     <script type="module" src="./main.js"></script>
+    <script src="../js/libs/md5/md5.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
