--- a/index.html
+++ b/index.html
@@ -13,25 +13,30 @@
 <body>
     <nav class="navbar navbar-expand-sm bg-body-tertiary" data-bs-theme="dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Voting App</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler"
-                aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-brand fw-bold">Voting App</span>
+            <span class="navbar-text ms-sm-auto fw-bold text-wrap" id="user"></span>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarToggler">
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link" id="showRegForm" href="#" data-bs-toggle="modal"
-                            data-bs-target="#regModal">Register</a>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <ul class="navbar-nav ms-auto mb-0">
+                    <li class="nav-item mt-2 m-sm-2">
+                        <a class="btn btn-primary" id="showRegForm" href="#" data-bs-toggle="modal"
+                            data-bs-target="#regModal" type="button">Register</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" id="showLogonForm" href="#" data-bs-toggle="modal"
-                            data-bs-target="#logonModal">Log-on</a>
+                    <li class="nav-item mt-2 m-sm-2 me-0">
+                        <a class="btn btn-primary" id="showLogonForm" href="#" data-bs-toggle="modal"
+                            data-bs-target="#logonModal" type="button">Log-on</a>
+                    </li>
+                    <li class="nav-item mt-2 m-sm-2 me-0">
+                        <a class="btn btn-primary d-none" id="logout" href="#" type="button">Log-out</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
+
     <!-- Registration Modal -->
     <div class="modal fade" id="regModal" tabindex="-1" aria-labelledby="regModalLabel" aria-hidden="true">
         <div class="modal-dialog">
@@ -49,17 +54,17 @@
                         </div>
                         <div class="form-group">
                             <label for="regUsername">Username</label>
-                            <input type="text" class="form-control is-invalid" id="regUsername" placeholder="Enter username"
-                                required>
+                            <input type="text" class="form-control" id="regUsername"
+                                placeholder="Enter username" disabled required>
                         </div>
                         <div class="form-group">
                             <label for="regPassword1">Password</label>
-                            <input type="password" class="form-control is-invalid" id="regPassword1" placeholder="Enter password"
-                                disabled required>
+                            <input type="password" class="form-control" id="regPassword1"
+                                placeholder="Enter password" disabled required>
                         </div>
                         <div class="form-group">
                             <label for="regPassword2">Re-enter password</label>
-                            <input type="password" class="form-control is-invalid" id="regPassword2"
+                            <input type="password" class="form-control" id="regPassword2"
                                 placeholder="Re-enter password" disabled>
                         </div>
                         <div class="modal-footer">
@@ -80,13 +85,13 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <form>
+                    <form id="loginForm">
                         <div class="form-group">
-                            <label for="inputUsername">Username</label>
+                            <label for="loginUsername">Username</label>
                             <input type="text" class="form-control" id="loginUsername" placeholder="Enter username">
                         </div>
                         <div class="form-group">
-                            <label for="inputPassword">Password</label>
+                            <label for="loginPassword">Password</label>
                             <input type="password" class="form-control" id="loginPassword" placeholder="Password">
                         </div>
                         <div class="modal-footer">
