Moved modal footers to right place

--- a/index.html
+++ b/index.html
@@ -54,24 +54,25 @@
                         </div>
                         <div class="form-group">
                             <label for="regUsername">Username</label>
-                            <input type="text" class="form-control" id="regUsername"
-                                placeholder="Enter username" disabled required>
+                            <input type="text" class="form-control" id="regUsername" placeholder="Enter username"
+                                disabled required>
                         </div>
                         <div class="form-group">
                             <label for="regPassword1">Password</label>
-                            <input type="password" class="form-control" id="regPassword1"
-                                placeholder="Enter password" disabled required>
+                            <input type="password" class="form-control" id="regPassword1" placeholder="Enter password"
+                                disabled required>
                         </div>
                         <div class="form-group">
                             <label for="regPassword2">Re-enter password</label>
                             <input type="password" class="form-control" id="regPassword2"
                                 placeholder="Re-enter password" disabled>
                         </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                            <button type="submit" class="btn btn-primary" id="regSubmit" disabled>Register</button>
-                        </div>
+
                     </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="submit" class="btn btn-primary" id="regSubmit" disabled>Register</button>
                 </div>
             </div>
         </div>
@@ -94,11 +95,11 @@
                             <label for="loginPassword">Password</label>
                             <input type="password" class="form-control" id="loginPassword" placeholder="Password">
                         </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                            <button type="submit" class="btn btn-primary" id="loginSubmit">Log-in</button>
-                        </div>
                     </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="submit" class="btn btn-primary" id="loginSubmit">Log-in</button>
                 </div>
             </div>
         </div>
