--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+
     <nav class="navbar navbar-expand-sm bg-body-tertiary" data-bs-theme="dark">
         <div class="container-fluid">
             <span class="navbar-brand fw-bold">Voting App</span>
@@ -36,6 +37,15 @@
             </div>
         </div>
     </nav>
+    <div aria-live="polite" aria-atomic="true" class="position-relative">
+        <div class="toast-container top-0 end-0 p-3">
+            <div class="toast align-items-center" id="toast" role="alert" aria-live="assertive" aria-atomic="true">
+                <div class="d-flex">
+                    <div class="toast-body" id="notificationMsg"></div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- Registration Modal -->
     <div class="modal fade" id="regModal" tabindex="-1" aria-labelledby="regModalLabel" aria-hidden="true">
@@ -109,6 +119,7 @@
             </div>
         </div>
     </div>
+
 
     <script type="module" src="./main.js"></script>
     <script src="../js/libs/md5/md5.min.js"></script>
