--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
     <title>Voting App</title>
 </head>
 
-<body>
-
-    <nav class="navbar navbar-expand-sm bg-body-tertiary" data-bs-theme="dark">
+<body data-bs-theme="dark">
+    <nav class="navbar navbar-expand-sm bg-body-tertiary">
         <div class="container-fluid">
             <span class="navbar-brand fw-bold">Voting App</span>
             <span class="navbar-text ms-sm-auto fw-bold text-wrap" id="user"></span>
