Added voting cards

--- a/index.html
+++ b/index.html
@@ -118,7 +118,10 @@
             </div>
         </div>
     </div>
-
+    <div class="container" id="voteContainer">
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+        </div>
+    </div>
 
     <script type="module" src="./main.js"></script>
     <script src="../js/libs/md5/md5.min.js"></script>
