--- a/index.html
+++ b/index.html
@@ -118,6 +118,23 @@
             </div>
         </div>
     </div>
+    <!-- Vote Modal -->
+    <div class="modal fade" id="voteModal" tabindex="-1" aria-labelledby="voteModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="voteModalLabel">Voting</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body mx-2">
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="submit" class="btn btn-primary" id="voteSubmit">Vote</button>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="container" id="voteContainer">
         <div class="row row-cols-1 row-cols-md-3 g-4">
         </div>
