renamed voteModal to viewVoteModal

--- a/index.html
+++ b/index.html
@@ -118,7 +118,24 @@
             </div>
         </div>
     </div>
-    <!-- Vote Modal -->
+    <!-- View vote modal -->
+    <div class="modal fade" id="viewVoteModal" tabindex="-1" aria-labelledby="viewVoteModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="viewVoteModalLabel">Voting</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body mx-2">
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="submit" class="btn btn-primary" id="voteSubmit">Vote</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Add vote modal -->
     <div class="modal fade" id="voteModal" tabindex="-1" aria-labelledby="voteModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
