--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <ul class="navbar-nav ms-auto mb-0">
                     <li class="nav-item mt-2 m-sm-2">
                         <a class="btn btn-primary" id="showAddVoteModal" href="#" data-bs-toggle="modal"
-                            data-bs-target="#regModal" type="button">Add new vote</a>
+                            data-bs-target="#addVoteModal" type="button">Add new vote</a>
                     </li>
                     <div class="vr d-none d-sm-inline"></div>
                     <li class="nav-item mt-2 m-sm-2">
