--- a/index.html
+++ b/index.html
@@ -11,33 +11,26 @@
 </head>
 
 <body data-bs-theme="dark">
-    <nav class="navbar navbar-expand-sm bg-body-tertiary">
+    <nav class="navbar navbar-expand-md bg-body-tertiary">
         <div class="container-fluid">
             <span class="navbar-brand fw-bold">Voting App</span>
-            <span class="navbar-text ms-sm-auto fw-bold text-wrap" id="user"></span>
+            <span class="navbar-text ms-md-auto fw-bold text-wrap" id="user"></span>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <ul class="navbar-nav ms-auto mb-0">
-                    <li class="nav-item mt-2 m-sm-2">
-                        <a class="btn btn-primary" id="showAddVoteModal" href="#" data-bs-toggle="modal"
-                            data-bs-target="#addVoteModal" type="button">Add new vote</a>
-                    </li>
-                    <div class="vr d-none d-sm-inline"></div>
-                    <li class="nav-item mt-2 m-sm-2">
-                        <a class="btn btn-primary" id="showRegModal" href="#" data-bs-toggle="modal"
-                            data-bs-target="#regModal" type="button">Register</a>
-                    </li>
-                    <li class="nav-item mt-2 m-sm-2 me-0">
-                        <a class="btn btn-primary" id="showLogonForm" href="#" data-bs-toggle="modal"
-                            data-bs-target="#logonModal" type="button">Log-on</a>
-                    </li>
-                    <li class="nav-item mt-2 m-sm-2 me-0">
-                        <a class="btn btn-primary d-none" id="logout" href="#" type="button">Log-out</a>
-                    </li>
-                </ul>
+                <div class="navbar-nav ms-md-auto">
+                    <div class="d-grid gap-2 d-md-flex justify-content-start justify-content-md-end ">
+                        <button class="btn btn-primary me-md-2" id="showAddVoteModal" data-bs-toggle="modal"
+                            data-bs-target="#addVoteModal" type="button">Add new vote</button>
+                        <button class="btn btn-primary" id="showRegModal" data-bs-toggle="modal"
+                            data-bs-target="#regModal" type="button">Register</button>
+                        <button class="btn btn-primary" id="showLogonForm" data-bs-toggle="modal"
+                            data-bs-target="#logonModal" type="button">Log-on</button>
+                        <button class="btn btn-primary d-none" id="logout" type="button">Log-out</button>
+                    </div>
+                </div>
             </div>
         </div>
     </nav>
@@ -62,7 +55,7 @@
                 <div class="modal-body" id="regFormModalBody">
                     <form id="regForm" class="has-validation">
                         <div class="form-group">
-                            <label for="regName">Full name</label>
+                            <label for="regFullName">Full name</label>
                             <input type="text" class="form-control" id="regFullName" placeholder="Enter full name"
                                 required>
                         </div>
@@ -149,15 +142,40 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body mx-2">
-                    <form >
-                        <div class="form-group">
-                            <label for="newVoteTitle">Title</label>
-                            <input type="text" class="form-control" id="newVoteTitle" placeholder="Vote title">
+                    <form>
+                        <div class="card rounded-0 border-bottom-0">
+                            <div class="card-header">Voting details</div>
+                            <div class="card-body">
+                                <div class="form-group">
+                                    <label for="newVoteTitle">Title</label>
+                                    <input type="text" class="form-control" id="newVoteTitle" placeholder="Vote title">
+                                </div>
+                                <div class="form-group">
+                                    <label for="newVoteDescription">Description</label>
+                                    <textarea class="form-control" id="newVoteDescription"
+                                        placeholder="Vote description"></textarea>
+                                </div>
+                            </div>
                         </div>
-                        <div class="form-group">
-                            <label for="newVoteDescription">Vote Description</label>
-                            <textarea type="text" class="form-control" id="newVoteDescription" placeholder="Vote description"></textarea>
+                        <div class="card rounded-0 border-top">
+                            <div class="card-header">Voting options</div>
+                            <div class="card-body">
+                                <div class="form-group">
+                                    <label for="newVoteOption1">Option 1</label>
+                                    <input type="text" class="form-control" id="newVoteOption1"
+                                        placeholder="Vote option 1">
+                                </div>
+                                <div class="form-group">
+                                    <label for="newVoteOption2">Option 2</label>
+                                    <input type="text" class="form-control" id="newVoteOption2"
+                                        placeholder="Vote option 2">
+                                </div>
+                                <div class="mt-2">
+                                    <button type="button" class="btn btn-primary" id="newVoteAddOption">+</button>
+                                </div>
+                            </div>
                         </div>
+
                     </form>
                 </div>
                 <div class="modal-footer">
