New vote adding feature

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body mx-2">
-                    <form>
+                    <form id="newVoteForm">
                         <div class="card rounded-0 border-bottom-0">
                             <div class="card-header">Voting details</div>
                             <div class="card-body">
@@ -196,7 +196,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="submit" class="btn btn-primary" id="addVoteSubmit">Add vote</button>
+                    <button type="button" class="btn btn-primary" id="addVoteSubmit">Add vote</button>
                 </div>
             </div>
         </div>
