--- a/index.html
+++ b/index.html
@@ -62,14 +62,15 @@
                         <label>User role</label>
                         <div class="form-group">
                             <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="radio" value="user" name="regRoleRadio" id="regRoleRadioUser"
-                                    checked>
+                                <input class="form-check-input" type="radio" value="user" name="regRoleRadio"
+                                    id="regRoleRadioUser" checked>
                                 <label class="form-check-label" for="regRoleRadioUser">
                                     User
                                 </label>
                             </div>
                             <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="radio" value="admin" name="regRoleRadio" id="regRoleRadioAdmin">
+                                <input class="form-check-input" type="radio" value="admin" name="regRoleRadio"
+                                    id="regRoleRadioAdmin">
                                 <label class="form-check-label" for="regRoleRadioAdmin">
                                     Admin
                                 </label>
@@ -163,11 +164,12 @@
                             <div class="card-header">Voting details</div>
                             <div class="card-body">
                                 <div class="form-group">
-                                    <label for="newVoteTitle">Title</label>
-                                    <input type="text" class="form-control" id="newVoteTitle" placeholder="Vote title">
+                                    <label for="newVoteTitle" class="form-label">Title</label>
+                                    <input type="text" class="form-control" id="newVoteTitle" placeholder="Vote title"
+                                        required>
                                 </div>
                                 <div class="form-group">
-                                    <label for="newVoteDescription">Description</label>
+                                    <label for="newVoteDescription" class="form-label">Description</label>
                                     <textarea class="form-control" id="newVoteDescription"
                                         placeholder="Vote description"></textarea>
                                 </div>
@@ -175,28 +177,28 @@
                         </div>
                         <div class="card rounded-0 border-top">
                             <div class="card-header">Voting options</div>
-                            <div class="card-body">
+                            <div class="card-body" id="newVoteOptions">
                                 <div class="form-group">
-                                    <label for="newVoteOption1">Option 1</label>
+                                    <label for="newVoteOption1" class="form-label">Option 1</label>
                                     <input type="text" class="form-control" id="newVoteOption1"
-                                        placeholder="Vote option 1">
+                                        placeholder="Vote option 1" required disabled>
                                 </div>
                                 <div class="form-group">
-                                    <label for="newVoteOption2">Option 2</label>
+                                    <label for="newVoteOption2" class="form-label">Option 2</label>
                                     <input type="text" class="form-control" id="newVoteOption2"
-                                        placeholder="Vote option 2">
+                                        placeholder="Vote option 2" required disabled>
                                 </div>
                                 <div class="mt-2">
-                                    <button type="button" class="btn btn-primary" id="newVoteAddOption">+</button>
+                                    <button type="button" class="btn btn-primary" id="newVoteAddOption"
+                                        disabled>+</button>
                                 </div>
                             </div>
                         </div>
-
                     </form>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary" id="addVoteSubmit">Add vote</button>
+                    <button type="button" class="btn btn-primary" id="addVoteSubmit" disabled>Add vote</button>
                 </div>
             </div>
         </div>
