Show message if no votes available

--- a/index.html
+++ b/index.html
@@ -194,9 +194,7 @@
             </div>
         </div>
     </div>
-    <div class="container" id="voteContainer">
-        <div class="row row-cols-1 row-cols-md-3 g-4">
-        </div>
+    <div class="container my-2" id="mainContentDiv">
     </div>
 
     <script type="module" src="./main.js"></script>
