--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
             </div>
         </div>
     </nav>
+    
+    <!-- Notification toast-->
     <div aria-live="polite" aria-atomic="true" class="position-relative">
         <div class="toast-container top-0 end-0 p-3">
             <div class="toast align-items-center" id="toast" role="alert" aria-live="assertive" aria-atomic="true">
