Login, registration, add new vote should work

--- a/index.html
+++ b/index.html
@@ -139,13 +139,13 @@
     <div class="modal fade" id="viewVoteModal" tabindex="-1" aria-labelledby="viewVoteModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
-                <div class="modal-header">
+                <div class="modal-header" id="viewVoteModalHeader">
                     <h1 class="modal-title fs-5" id="viewVoteModalLabel">Voting</h1>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                <div class="modal-body mx-2">
+                <div class="modal-body mx-2" id="viewVoteModalBody">
                 </div>
-                <div class="modal-footer">
+                <div class="modal-footer" id="viewVoteModalFooter">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                     <button type="submit" class="btn btn-primary" id="voteSubmit">Vote</button>
                 </div>
