Added user delete feature

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav ms-md-auto">
-                    <div class="d-grid gap-2 d-md-flex justify-content-start justify-content-md-end ">
+                    <div class="d-grid gap-2 d-md-flex justify-content-start justify-content-md-end" id="navMenu">
                         <button class="btn btn-primary me-md-2 d-none" id="showAddVoteModal" data-bs-toggle="modal"
                             data-bs-target="#addVoteModal" type="button">Add new vote</button>
                         <button class="btn btn-primary" id="showRegModal" data-bs-toggle="modal"
